--- a/deploy-ecs.yml
+++ b/deploy-ecs.yml
@@ -1,4 +1,4 @@
-name: Deploy to ECS Fargate
+name: Deploy to ECS Fargate  
 
 on:
   push:
@@ -44,31 +44,36 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "새 이미지가 ECR에 푸시되었습니다: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-      - name: Deploy to ECS Fargate
+      - name: Deploy to ECS Fargate (Blue/Green)
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
+          CLUSTER_NAME: music-app-cluster
+          SERVICE_NAME: music-app-service
+          TASK_DEF_NAME: music-app-task
+          CODEDEPLOY_APP: music-app-codedeploy-app
+          CODEDEPLOY_GROUP: music-app-codedeploy-dg
         run: |
-          echo "ECS Fargate 배포 시작..."
-          
+          echo "ECS Fargate  배포 시작..."
+
           # 새 이미지 URI
           NEW_IMAGE_URI="$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           echo "새 이미지 URI: $NEW_IMAGE_URI"
-          
+
           # 기존 Task Definition 가져오기
           echo "기존 Task Definition 조회 중..."
           aws ecs describe-task-definition \
-            --task-definition music-app-task \
+            --task-definition $TASK_DEF_NAME \
             --query 'taskDefinition' > task-def.json
-          
+
           # Task Definition에서 불필요한 필드 제거 및 이미지 업데이트
           echo "Task Definition 업데이트 중..."
           cat task-def.json | jq "
             del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .placementConstraints, .compatibilities, .registeredAt, .registeredBy) |
             .containerDefinitions[0].image = \"$NEW_IMAGE_URI\"
           " > new-task-def.json
-          
+
           # JSON 구조 검증
           echo "업데이트된 Task Definition 검증 중..."
           if ! jq empty new-task-def.json 2>/dev/null; then
@@ -76,45 +81,58 @@ jobs:
             cat new-task-def.json
             exit 1
           fi
-          
+
           # 새 Task Definition 등록
           echo "새 Task Definition 등록 중..."
           NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
             --cli-input-json file://new-task-def.json \
             --query 'taskDefinition.taskDefinitionArn' \
             --output text)
-          
+
           echo "새 Task Definition 등록 완료: $NEW_TASK_DEF_ARN"
-          
-          # ECS Service 업데이트 (롤링 배포)
-          echo "ECS Service 업데이트 시작..."
-          aws ecs update-service \
-            --cluster music-app-cluster \
-            --service music-app-service \
-            --task-definition "$NEW_TASK_DEF_ARN" \
-            --force-new-deployment \
-            --no-cli-pager
-          
-          echo "배포 완료 대기 중... (최대 10분)"
-          timeout 600 aws ecs wait services-stable \
-            --cluster music-app-cluster \
-            --services music-app-service || {
-            echo "배포 타임아웃 - 수동으로 상태를 확인해주세요"
-            exit 0
-          }
-          
-          echo "ECS Fargate 배포 완료!"
-          
+
+          # AppSpec 파일 생성 (CodeDeploy용)
+          cat <<EOF > appspec.yaml
+          version: 1
+          Resources:
+            - TargetService:
+                Type: AWS::ECS::Service
+                Properties:
+                  TaskDefinition: $NEW_TASK_DEF_ARN
+                  LoadBalancerInfo:
+                    ContainerName: $(jq -r '.containerDefinitions[0].name' new-task-def.json)
+                    ContainerPort: $(jq -r '.containerDefinitions[0].portMappings[0].containerPort' new-task-def.json)
+          EOF
+
+          # CodeDeploy를 통한 블루/그린 배포 시작
+          echo "CodeDeploy 배포 생성 중..."
+          DEPLOYMENT_ID=$(aws deploy create-deployment \
+            --application-name $CODEDEPLOY_APP \
+            --deployment-group-name $CODEDEPLOY_GROUP \
+            --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
+            --file-exists-behavior OVERWRITE \
+            --s3-location bucket=${{ secrets.CODEDEPLOY_S3_BUCKET }},bundleType=YAML,key=appspec.yaml \
+            --output text --query deploymentId)
+
+          echo "배포 ID: $DEPLOYMENT_ID"
+
+          # 배포 완료 대기
+          echo "배포 완료 대기 중..."
+          aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
+
+          echo "블루/그린 배포 완료!"
+
           # 서비스 상태 확인
           echo "현재 서비스 상태:"
           aws ecs describe-services \
-            --cluster music-app-cluster \
-            --services music-app-service \
+            --cluster $CLUSTER_NAME \
+            --services $SERVICE_NAME \
             --query 'services[0].[serviceName,status,runningCount,pendingCount,deployments[0].status]' \
             --output table
-          
+
           # 배포된 이미지 정보 출력
           echo "배포된 컨테이너 이미지: $NEW_IMAGE_URI"
-          
+
           # 정리
-          rm -f task-def.json new-task-def.json 
+          rm -f task-def.json new-task-def.json appspec.yaml
+
