--- a/post-server/env.example
+++ b/post-server/env.example
@@ -5,4 +5,15 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=your_database_name
 DB_USER=your_username
-DB_PASSWORD=your_password 
+DB_PASSWORD=your_password
+
+# JWT Configuration
+SECRET_KEY=your_secret_key_here_make_it_long_and_random
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=your_aws_region
+S3_BUCKET_NAME=your_s3_bucket_name 
